# mod-lab03-coffee

.github/workflows/: release.yml
include/: Automata.h  States.h
src/: Automata.cpp  CMakeLists.txt  main.cpp
test/: CMakeLists.txt  products.json  tests.cpp
